# transform-feedback-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-darwin.sh
.github/workflows/: cmake-build.yml
assets/shaders/: demo.frag.glsl  demo.vert.glsl  dot.frag.glsl  dot.geom.glsl  dot.vert.glsl
cmake/: Dependency.cmake
src/: flatten.cpp  flatten.h  geometry.cpp  geometry.h  main.cpp  render.cpp  render.h  shader.cpp  shader.h  viewer.cpp  viewer.h
